feat: remover definições de segurança Bearer das rotas de referência e tornar as rotas públicas
